# DLmodule3

./: .gitignore  Makefile  README.md  create_checkpoint_archive.sh  memory_results.csv  plot_hyperparam_sweep.py  pyproject.toml  requirements.txt
final_evaluation_plots/: final_results.csv
src/: diffusion.py  flow_matching.py  memory_profiler.py  multi_seed_training.py  optimize.py  sampling.py
src/conf/: config.yaml
src/conf/logging/: detailed.yaml  simple.yaml
src/conf/main/: default.yaml  default_2d.yaml  default_ffhq.yaml
src/conf/model/: diffusion.yaml  diffusion_2d.yaml  diffusion_cnn.yaml  diffusion_unet.yaml  flow_matching.yaml  flow_matching_2d.yaml  flow_matching_cnn.yaml  flow_matching_unet.yaml
src/conf/sweep/: loss_coverage_sweep.yaml  loss_image_sweep.yaml
src/utils/: callbacks.py  dataset.py  evaluator.py  gpu_utils.py  load_huggingface_data.py  models.py  seeding.py  visualisation.py
tex/: main.tex  references.bib
