[project]
name = "module3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "gputil>=1.4.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "optuna>=3.0.0",
    "optuna-integration>=4.4.0",
    "psutil>=7.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "psycopg>=3.2.9",
    "pymysql>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
]

[tool.uv]
prerelease = "allow"
